<resources>
    <string name="app_name">LosSimpsons</string>
    <string name="main_personajes">Personajes</string>
    <string name="main_ranking">Ranking</string>
    <string name="main_jugadores">Jugadores</string>
    <string name="main_escenarios">Escenarios</string>
    <string name="main_acerca_de">Acerca de</string>
    <string name="jugadores">Jugadores</string>
    <string name="rankings">Rankings</string>
    <string name="nombre_jugador">Nombre_Jugador</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="nivel1">Nivel 1</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="log_in">LOG IN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="introduce_tu_usuario">Introduce tu usuario</string>
    <string name="usuario">Usuario</string>
    <string name="eMail">eMail</string>
    <string name="instroducela_de_nuevo">Introducela de nuevo</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="donde_estamos">Dónde estamos</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWxlZGVsZW9uZXoiLCJhIjoiY2xhdGQxZDd6MmJmMzN4bGJieDMyZmJleCJ9.bIFVpM-jk-poGfoeuFgnZg</string>
    <string name="title_activity_mapa">activity_mapa</string>
    <string name="title_activity_mapa_inicial">MapaInicial</string>
</resources>