<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="414dp"
        android:layout_height="893dp"
        android:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondomain" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="192dp"
            android:layout_height="106dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Welcome User1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/boton_acercade"
            android:layout_width="140dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:foregroundGravity="center_horizontal"
            android:gravity="center|center_horizontal"
            android:onClick="VentanaAcercaDe"
            android:text="@string/main_acerca_de" />

        <Button
            android:id="@+id/boton_jugadores"
            android:layout_width="146dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:onClick="VentanaJugadores"
            android:text="@string/main_jugadores" />

        <Button
            android:id="@+id/boton_escenarios"
            android:layout_width="140dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#C4673AB7"
            android:onClick="VentanaEscenarios"
            android:text="@string/main_escenarios" />

        <Button
            android:id="@+id/boton_personajes"
            android:layout_width="140dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="VentanaPersonajes"
            android:text="@string/main_personajes" />

        <Button
            android:id="@+id/boton_ranking"
            android:layout_width="140dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#B0F44336"
            android:onClick="VentanaRanking"
            android:text="@string/main_ranking" />

        <Button
            android:id="@+id/boton_mapa"
            android:layout_width="140dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:onClick="VentanaMapa"
            android:text="Dónde estamos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>